--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -4,8 +4,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <h1>hello cc</h1>
+    <h1>hello ccccc</h1>
+    <img src="/images/1243870.jpg" alt="wibu">
 </body>
 </html>
