--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -1,4 +1,4 @@
-*{
+* {
     font-size: 14px;
 }
 
@@ -29,4 +29,60 @@ body {
 .topnav a.active {
     background-color: #04AA6D;
     color: white;
+}
+
+/*css for form html*/
+
+input[type=text],
+select {
+    width: 100%;
+    padding: 10px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+input[type=email],
+select {
+    width: 100%;
+    padding: 10px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+input[type=submit] {
+    width: 100%;
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+input[type=submit]:hover {
+    background-color: #45a049;
+}
+
+.insert-user-container {
+    margin-top: 10px;
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 15px;
+    width: 50%;
+    margin-left: 25%;
+}
+
+.insert-user-container h2 {
+    text-align: center;
+}
+
+.insert-user-container label {
+    font-weight: 600;
 }
