--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -8,13 +8,14 @@
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     </head>
     <body>
+        <!--thanh nav-->
         <div class="topnav">
             <a class="active" href="#home">Home</a>
             <a href="/news">News</a>
-            <a href="#contact">Contact</a>
-            <a href="#about">About</a>
+            <a href="#contact">liu liu</a>
+            <a href="#about">hey hey</a>
         </div>
-
+        <!--table list user-->
         <div class="w3-container">
             <h2>List User Table</h2>
             <table class="w3-table-all w3-hoverable">
@@ -59,6 +60,25 @@
 
 
             </table>
+        </div>
+        <!--form input-->
+        <div class="insert-user-container">
+            <form action="/create-new-user" method="POST">
+                <h2>Insert New User</h2>
+                <label for="fname">First Name</label>
+                <input type="text" id="fname" name="firstName" placeholder="Your name">
+            
+                <label for="lname">Last Name</label>
+                <input type="text" id="lname" name="lastName" placeholder="Your last name">
+            
+                <label for="lemail">Email</label>
+                <input type="email" id="lmail" name="email" placeholder="Your email">
+
+                <label for="laddress">Address</label>
+                <input type="text" id="laddress" name="address" placeholder="Your address">
+              
+                <input type="submit" value="Submit">
+              </form>
         </div>
         </body>
     </html>
